--- a/public/css/all.css
+++ b/public/css/all.css
@@ -16121,7 +16121,7 @@ button.close {
 .skin-blue .wrapper,
 .skin-blue .main-sidebar,
 .skin-blue .left-side {
-  background-color: #222d32;
+  background-color: #BDBDBD;
 }
 .skin-blue .user-panel > .info,
 .skin-blue .user-panel > .info > a {
@@ -16145,7 +16145,7 @@ button.close {
   background: #2c3b41;
 }
 .skin-blue .sidebar a {
-  color: #b8c7ce;
+  color: #222d32;
 }
 .skin-blue .sidebar a:hover {
   text-decoration: none;
